include links for use cases

--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://docs.automatiko.io/main/0.0.0/use-cases.html#_event_streams" class="portfolio-box">
                     <img src="img/portfolio/1.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -17,7 +17,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://docs.automatiko.io/main/0.0.0/use-cases.html#_internet_of_things_iot" class="portfolio-box">
                     <img src="img/portfolio/2.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -32,7 +32,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://docs.automatiko.io/main/0.0.0/use-cases.html#_service_orchestration" class="portfolio-box">
                     <img src="img/portfolio/3.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -47,7 +47,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://docs.automatiko.io/main/0.0.0/use-cases.html#_human_centric_workflows" class="portfolio-box">
                     <img src="img/portfolio/4.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -62,7 +62,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://docs.automatiko.io/main/0.0.0/use-cases.html#_database_record_processing" class="portfolio-box">
                     <img src="img/portfolio/5.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
@@ -77,7 +77,7 @@
                 </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
+                <a href="https://docs.automatiko.io/main/0.0.0/use-cases.html#_batch_processing" class="portfolio-box">
                     <img src="img/portfolio/6.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
