--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -14,4 +14,13 @@
   {% include scripts.html %}
 </body>
 
+<!-- Footer -->
+<footer class="text-center text-lg-start">
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2020 Copyright: Automatiko
+  </div>
+  <div class="text-center p-3">
+    Credits for head image: analytics PNG Designed By lulu from <a href="https://pngtree.com">Pngtree.com</a>
+  </div>
+</footer>
 </html>
