--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">In a nutshell</h2>
                 <hr class="primary">
             </div>
         </div>
@@ -11,21 +11,21 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
+                    <i class="fa fa-4x fa-cogs wow bounceIn text-primary"></i>
                     <h3>Worklow as a Service</h3>
                     <p class="text-muted">Workflow as a Service brings an idea of modeling a service as a workflowthat is exposed as a fully featured service with a dedicated (domain specific) API.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa-function wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Workflow as a Function</h3>
                     <p class="text-muted">Workflow as a Function is dedicated for short lived operations that usually last no longer that a second abd are expected to be fast and small in size both at runtime and at boot time</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fa fa-4x fa-flux-capacitor wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Workflow as a Function Flow</h3>
                     <p class="text-muted">Workflow as Function Flow is a more advanced extension to Workflow as a Function which breaks the workflow into many different functions</p>
                 </div>
