--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,14 +18,14 @@
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fas fa-fan wow bounceIn text-primary" data-wow-delay=".1s"></i>
+                    <i class="fa fa-4x fa fa-cube wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Workflow as a Function</h3>
                     <p class="text-muted">Workflow as a Function is dedicated for short lived operations that usually last no longer that a second abd are expected to be fast and small in size both at runtime and at boot time</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
-                    <i class="fa fa-4x fas fa-stream wow bounceIn text-primary" data-wow-delay=".2s"></i>
+                    <i class="fa fa-4x fa fa-cubes wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Workflow as a Function Flow</h3>
                     <p class="text-muted">Workflow as Function Flow is a more advanced extension to Workflow as a Function which breaks the workflow into many different functions</p>
                 </div>
