--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>Build services and functions based on workflows</h1>
             <hr>
-            <p>Automatiko can help you build better services and functions based on workflows and descisions expressed with well known standards</p>
+            <p>Automatiko can help you build better services and functions based on workflows and decisions expressed with well known standards</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
