--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Automatiko - build services and functions based on workflows">
+    <meta name="author" content="Automatiko team">
+    <meta name="keywords" content="workflow,java,opensource,workflow as a service,workflow as a function,workflow as a function flow,business process,process,automation,business automation,process automation,functions,java functions,cloud functions">
 
     <title>Automatiko - build services and functions based on workflows and decisions</title>
 
