--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,6 +26,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="https://blog.automatiko.io">Blog</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
