added twitter card support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,8 @@
     <meta name="author" content="Automatiko team">
     <meta name="keywords" content="workflow,java,opensource,workflow as a service,workflow as a function,workflow as a function flow,business process,process,automation,business automation,process automation,functions,java functions,cloud functions">
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@automatiko_io" />
+    <meta name="twitter:title" content="Automatiko - build services and functions based on workflows" />
+    <meta name="twitter:text:title" content="Automatiko - build services and functions based on workflows" />
     <meta name="twitter:creator" content="@automatiko_io" />
     <title>Automatiko - build services and functions based on workflows and decisions</title>
 
