--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,14 +13,14 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-cogs wow bounceIn text-primary"></i>
                     <h3>Worklow as a Service</h3>
-                    <p class="text-muted">Workflow as a Service brings an idea of modeling a service as a workflowthat is exposed as a fully featured service with a dedicated (domain specific) API.</p>
+                    <p class="text-muted">Workflow as a Service brings an idea of modeling a service as a workflow that is exposed as a fully featured service with a dedicated (domain specific) API.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa fa-cube wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Workflow as a Function</h3>
-                    <p class="text-muted">Workflow as a Function is dedicated for short lived operations that usually last no longer that a second abd are expected to be fast and small in size both at runtime and at boot time</p>
+                    <p class="text-muted">Workflow as a Function is dedicated for short lived operations that usually last no longer that a second and are expected to be fast and small in size both at runtime and at boot time</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
