--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,7 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid bg-primary">
+       <h3><center>Latest release of Automatiko is 0.7.0 <a href="https://blog.automatiko.io/2021/08/26/release-0.7.0.html"><font color="white"><u>see release announcement</u></font></a></center></h3>
+    </div>
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -32,6 +35,5 @@
             </ul>
         </div>
         <!-- /.navbar-collapse -->
-    </div>
     <!-- /.container-fluid -->
 </nav>
