--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,7 +12,7 @@
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-cogs wow bounceIn text-primary"></i>
-                    <h3>Worklow as a Service</h3>
+                    <h3>Workflow as a Service</h3>
                     <p class="text-muted">Workflow as a Service brings an idea of modeling a service as a workflow that is exposed as a fully featured service with a dedicated (domain specific) API.</p>
                 </div>
             </div>
